conf/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    pod: back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-05
  template:
    metadata:
      labels:
        app: backend-05
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
