conf/deploy_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl1
  labels:
    pod: depl1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task05
  template:
    metadata:
      labels:
        app: task05
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
