conf/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  labels:
    pod: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-05
  template:
    metadata:
      labels:
        app: frontend-05
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
