conf/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool
#  labels:
#    app: task03
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool
    ports:
    - containerPort: 8080
