conf/service_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc05
spec:
  selector:
    app: task05
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  # externalIPs:
  #   - 192.168.120.100
