conf/svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-05
spec:
  selector:
    app: backend-05
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  # externalIPs:
  #   - 192.168.120.100
