conf/svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-05
spec:
  selector:
    app: frontend-05
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  # externalIPs:
  #   - 192.168.120.100
