conf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: task05.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-05
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-05
            port:
              number: 80
